[gd_scene load_steps=5 format=3 uid="uid://d3aej8n5243mi"]

[ext_resource type="Script" path="res://components/play_area/play_area.gd" id="1_5b1f1"]
[ext_resource type="PackedScene" uid="uid://bhw12odsa6k2f" path="res://components/enemy_spawn_point/enemy_spawn_point.tscn" id="2_63l8a"]
[ext_resource type="PackedScene" uid="uid://b6tpiarhgoqnf" path="res://components/play_area/play_area_tilemap/play_area_tilemap.tscn" id="2_quyml"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_xs0xp"]
vertices = PackedVector2Array(1450, -350, 1350, -350, -450, -450, -250, -450, 750, 750, 450, 750, -450, 650, -250, 650, 650, -650, 450, -650, -450, -750, 450, -750, 750, 350, 650, 650, 650, 450, 450, -250, 450, 250, 250, 450, 150, 150, 150, -150, 1250, 850, 1250, 1050, 1050, 1250, 950, 950, 950, 350, 1450, -750, 950, -450, 1350, -750, 950, -950, 1350, -1350, 750, -1350, 450, -950, 1350, 350, 650, 250, 650, -250, -150, -150, -350, 1350, -350, 1437.75, -750, 1435.76, -750, 1350, -450, 950, 750, 1350, 750, 1443.23, 350, 1441.24, 350, 1350, 450, 950, -750, -1350, -750, -1437.97, -350, -1436.91, -350, -1350, -450, -950, 350, -1350, 350, -1435.05, 750, -1433.99, -250, -1350, -250, -1250, 50, -1250, 50, -1350, 750, -750, 750, -450, 650, -450, -150, 150, -250, 450, -350, 150, -350, -150, -450, -250, -450, -150, -650, -450, -650, -250, -450, 250, -450, 150, 1450, 350, 1450, 750, 1350, 750, 1350, 850, 450, 450, 450, 650, 250, 650, -450, 750, -650, 650, -750, 750, -750, 450, -650, 450, 1450, 1050, 1450, 1350, 1350, 1250, 1350, 1350, 1050, 1350, -950, 950, -1150, 1350, -1150, 1250, -1350, 1250, -1350, 750, -950, 450, -1450, 750, -1450, 350, -1350, 350, -1350, -350, -1450, -350, -1450, -750, -1350, -750, -950, -450, -1350, -1350, -950, -950, -750, -450, -650, 250, -450, 450, -750, -750, -650, -650, -450, -650, 450, -450, 250, -450, 250, -650, -250, -650)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(12, 4, 13, 14), PackedInt32Array(15, 16, 17, 18, 19), PackedInt32Array(20, 21, 22, 23, 24), PackedInt32Array(25, 0, 26, 27), PackedInt32Array(27, 26, 28, 29), PackedInt32Array(30, 29, 28, 31), PackedInt32Array(1, 32, 24, 33, 34), PackedInt32Array(2, 1, 34, 15), PackedInt32Array(2, 15, 19, 35), PackedInt32Array(36, 37, 38, 39, 40), PackedInt32Array(41, 42, 43, 44, 45), PackedInt32Array(46, 47, 48, 49, 50), PackedInt32Array(51, 52, 53, 30, 31), PackedInt32Array(50, 49, 54, 55, 10), PackedInt32Array(56, 57, 51, 31), PackedInt32Array(58, 59, 60, 8), PackedInt32Array(11, 58, 8), PackedInt32Array(56, 31, 11, 10, 55), PackedInt32Array(35, 61, 62, 63, 64), PackedInt32Array(2, 35, 64, 65), PackedInt32Array(64, 66, 65), PackedInt32Array(67, 2, 65, 68), PackedInt32Array(69, 70, 63, 62), PackedInt32Array(32, 71, 72, 73), PackedInt32Array(73, 74, 20, 24), PackedInt32Array(32, 73, 24), PackedInt32Array(33, 24, 12), PackedInt32Array(16, 33, 12, 14, 75), PackedInt32Array(75, 76, 77, 17), PackedInt32Array(16, 75, 17), PackedInt32Array(18, 17, 62, 61), PackedInt32Array(40, 78, 5, 45, 44, 36), PackedInt32Array(6, 5, 78, 79), PackedInt32Array(79, 78, 80), PackedInt32Array(79, 80, 81, 82), PackedInt32Array(21, 83, 84, 85), PackedInt32Array(84, 86, 85), PackedInt32Array(21, 85, 22), PackedInt32Array(23, 22, 87, 41, 45), PackedInt32Array(88, 40, 39, 89, 90), PackedInt32Array(88, 90, 91, 92, 93), PackedInt32Array(93, 92, 94, 95, 96), PackedInt32Array(97, 98, 99, 100, 101), PackedInt32Array(100, 102, 46, 103), PackedInt32Array(46, 50, 103), PackedInt32Array(100, 103, 101), PackedInt32Array(93, 96, 97, 101, 104, 81), PackedInt32Array(82, 81, 104, 105), PackedInt32Array(105, 69, 62, 106), PackedInt32Array(76, 13, 4), PackedInt32Array(77, 76, 4), PackedInt32Array(59, 26, 0), PackedInt32Array(7, 77, 4), PackedInt32Array(62, 7, 6, 106), PackedInt32Array(105, 106, 82), PackedInt32Array(68, 105, 104), PackedInt32Array(67, 68, 104, 107), PackedInt32Array(108, 67, 107), PackedInt32Array(108, 107, 10, 109), PackedInt32Array(60, 59, 0), PackedInt32Array(110, 60, 0), PackedInt32Array(110, 0, 111), PackedInt32Array(9, 110, 111, 112), PackedInt32Array(10, 9, 112), PackedInt32Array(10, 112, 113), PackedInt32Array(109, 10, 113, 3), PackedInt32Array(2, 109, 3), PackedInt32Array(0, 3, 111)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1512, -1490, 1503, -1482, 1503, 1497, -1505, 1482)])
source_geometry_mode = 1
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 50.0

[node name="PlayArea" type="Node2D"]
script = ExtResource("1_5b1f1")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_xs0xp")

[node name="PlayAreaTilemap" parent="NavigationRegion2D" instance=ExtResource("2_quyml")]
unique_name_in_owner = true

[node name="EnemySpawnPointsLayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EnemySpawnPoint" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(1200, -1200)

[node name="EnemySpawnPoint2" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(1200, 1200)

[node name="EnemySpawnPoint3" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(-1200, 1200)

[node name="EnemySpawnPoint7" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(-1200, 0)

[node name="EnemySpawnPoint8" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(1200, 0)

[node name="EnemySpawnPoint4" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(-1200, -1200)

[node name="EnemySpawnPoint5" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(0, -1255)

[node name="EnemySpawnPoint6" parent="EnemySpawnPointsLayer" instance=ExtResource("2_63l8a")]
position = Vector2(0, 1268)
